--- a/testhtml.html
+++ b/testhtml.html
@@ -5,9 +5,9 @@
 </head>
 <body> this is just a test</body>
 <script>
-host= window.location.origin
+//host= window.location.origin
      $.ajax({
-            "url": host+"/book/1",
+            "url"   :"http://127.0.0.1:5000/book/2",
             "method": "GET",
             "data": "",
             "dataType": "HTML",
@@ -18,6 +18,6 @@ host= window.location.origin
                 console.log("error: " + status + " msg:" + error);
             }
         });
-console.log(host)
+//console.log(host)
 </script>
 </html>
